getting read of overflow issue

--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@ html {
   font-size: 62.5%;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  
+  position:relative;
   background-color: #fff;
   width: 100%;
   font-size: 1rem;
@@ -468,10 +469,16 @@ h3 {
   * {
     scroll-behavior: smooth;
   }
-}
+
 
 * {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+html {
+  font-size: 62.5%;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 @media only screen and (max-width: 768px) {
   
@@ -495,12 +502,13 @@ body {
     flex-direction: row-reverse;
     justify-content: space-evenly;
     width: 100%;
+    overflow-x:hidden;
         }
   .what-item {
     max-width: 100%;
     margin: 0 auto;
     align-items: center;
-       
+    overflow-x: hidden;
   }
   .home-div {
     flex-direction: row-reverse;
@@ -515,13 +523,14 @@ body {
   .home-text {
     min-width: 100%;
     text-align: center;
-    margin: 0 auto;
+    overflow-x: hidden;
   }
 
   .home-image {
     min-width: 100%;
     border-radius: 50%;
     margin: 0 auto;
+    overflow-x: hidden;
 
   }
 }
@@ -560,7 +569,7 @@ body {
       margin-top: 5rem;
       width: 100%;
       padding: 5rem;
-      gap: 1git rem;
+      gap: 1rem;
     }
   
     .home-text {
